--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -47,6 +47,17 @@ pipelines:
       inputs: []
       outputs: []
     dependencies: {}
+  pipelines/W1:
+    name: W1
+    description: Really solid info
+    author: dionne.kreiger@hotmail.com
+    mode: batch
+    language: scala
+    createdAt: '2022-04-17 18:38:25'
+    datasets:
+      inputs: []
+      outputs: []
+    dependencies: {}
   workflows/Mary_Rath_MD:
     name: Mary_Rath_MD
     description: ''
@@ -81,7 +92,15 @@ pipelines:
       outputs: []
     dependencies: {}
 datasets: {}
-jobs: {}
+jobs:
+  jobs/Gertrude_KossRita_StoryRoyal_Jenkins:
+    name: Gertrude_KossRita_StoryRoyal_Jenkins
+    description: Really solid info
+    scheduler:
+      Nil: {}
+    schedulerJobUID: null
+    createdAt: '2022-04-17 18:38:26'
+    author: dionne.kreiger@hotmail.com
 libraries: []
 dependencies: '[]'
 template: '[]'
